implementação endPoint GetCategoriaID + documentação swagger
